spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-discoveryclient-it/src/test/resources/wiremock/discovery-wiremock-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiremock-deployment
spec:
  selector:
    matchLabels:
      app: wiremock
  template:
    metadata:
      labels:
        app: wiremock
    spec:
      containers:
        - name: wiremock
          image: wiremock/wiremock:2.32.0
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8080
              path: /__admin/mappings
          livenessProbe:
            httpGet:
              port: 8080
              path: /__admin/mappings
          ports:
            - containerPort: 8080
