spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-discoveryclient-it/src/test/resources/wiremock/discovery-wiremock-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiremock-ingress
spec:
  rules:
    - http:
        paths:
          - path: /wiremock
            pathType: Prefix
            backend:
              service:
                name: wiremock
                port:
                  number: 8080
