spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-discoveryclient-it/src/test/resources/wiremock/discovery-wiremock-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wiremock
  name: wiremock
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: wiremock
  type: ClusterIP
